2007-04-21  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_button):
	* engines/clearlooks/src/clearlooks_draw_inverted.c:
	(clearlooks_inverted_draw_button):
	Last time I forgot to fix radius of new inset function, Fixed.

2007-04-20  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_inset), (clearlooks_draw_button),
	(clearlooks_draw_entry), (clearlooks_draw_scale_trough):
	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_button):
	* engines/clearlooks/src/clearlooks_draw_inverted.c:
	(clearlooks_inverted_draw_button),
	(clearlooks_register_style_inverted):
	* engines/clearlooks/src/clearlooks_types.h:
	Improved inset porting few code originally written by ECHM.
	Now it is top-left/bottom-right and it is rounded.
	Fixed problems with alpha backgrounds.

2007-04-15  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/crux/src/crux-draw.c:
	Replaced two // comments with /* */ ones. Fixes crux build for me.

2007-04-15  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	* engines/clearlooks/src/clearlooks_draw_inverted.c:
	Remove some unneccessary casts that break build on Solaris. Patch
	from Damien Carbery, bug #428772.

2007-04-15  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/redmond/src/redmond_gtk2_drawing.c:
	(redmond_draw_option):
	Use the correct colors for the radio bullet.
	(Bug #429730, Tiago Cogumbreiro)

2007-04-15  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/redmond/src/redmond_gtk2_drawing.c:
	(redmond_draw_option): Changes to the radius of the radio button and
	the bullet. (Bug #429761, Tiago Cogumbreiro)

	* engines/redmond/src/redmond_gtk2_drawing.c:
	(redmond_draw_extension): Better fake the original redmond tabs.
	(Bug #430012, Tiago Cogumbreiro)

	* themes/Redmond/gtk-2.0/gtkrc:
	- Set appears-as-list mode for GtkComboBox