@@ -1,3 +1,10 @@
+2007-04-22  Benjamin Berg  <benjamin@sipsolutions.net>
+
+	* engines/smooth/src/engine/shared/gtk/smooth_gtk_rc.c:
+	(smooth_arrow_merge):
+	Call a helper function and added a comment to clarify what the code
+	is for.
+
 2007-04-21  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* engines/clearlooks/src/clearlooks_draw_glossy.c:
